SET(LIBTREE_SRC tree.cc)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
ADD_LIBRARY(tree SHARED ${LIBTREE_SRC})

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
ADD_LIBRARY(graph SHARED graph.cc)

ADD_EXECUTABLE(graph_test  graph_test.cc)
TARGET_LINK_LIBRARIES(graph_test graph ${GTEST_BOTH_LIBRARIES})